"""
Root BUILD file for Toyota MyT2ABRP WebAssembly component system

Current Components:
- business-logic: JWT operations (400 lines)
- circuit-breaker: Resilient API calls (184 lines)

Future: Gateway component will import both via WAC composition
"""

# Export test script for validation
exports_files([
    "test-component.sh",
])

# WAC composition - components are built independently for now
# Future composition will look like:
#
# load("@rules_wasm_component//wac:defs.bzl", "wac_plug")
#
# wac_plug(
#     name = "gateway_app",
#     component = "//components/gateway:gateway",
#     plug = {
#         "toyota:business-logic/jwt": "//components/business-logic:business_logic",
#         "toyota:circuit-breaker/breaker": "//components/circuit-breaker:circuit_breaker",
#     },
#     visibility = ["//visibility:public"],
# )

# Test suite for all components
test_suite(
    name = "all_tests",
    tests = [
        "//components/business-logic:business_logic_test",
        # circuit-breaker tests run via cargo test (native target)
    ],
)
