"""
Root BUILD file for Toyota MyT2ABRP WebAssembly component system

Components (8 total):
- toyota-api-types: Common types (85 lines, 240KB)
- data-transform: Data transformations (150 lines, 263KB)
- validation: Input validation (150 lines, 71KB)
- retry-logic: Retry strategies (100 lines, 84KB)
- circuit-breaker: Resilient API calls (184 lines, 89KB)
- business-logic: JWT operations (400 lines, stats pending)
- metrics: Observability (125 lines, 101KB)
- gateway: Spin HTTP handler (34 lines, 227KB)

WAC Composition: Gateway composes all components together
"""

load("@rules_wasm_component//wac:defs.bzl", "wac_plug")

# Export test script for validation
exports_files([
    "test-component.sh",
])

# WAC composition - compose gateway with all components
# This creates the final WASM file that Spin will run
wac_plug(
    name = "myt2abrp_app",
    component = "//components/gateway:gateway",
    plug = {
        # Wire component imports to their implementations
        "toyota:validation/validator@0.1.0": "//components/validation:toyota_validation",
        "toyota:retry/strategy@0.1.0": "//components/retry-logic:toyota_retry_logic",
        "toyota:business-logic/jwt@0.1.0": "//components/business-logic:business_logic",
        "toyota:circuit-breaker/breaker@0.1.0": "//components/circuit-breaker:toyota_circuit_breaker",
        "toyota:data-transform/converter@0.1.0": "//components/data-transform:toyota_data_transform",
        "toyota:api-types/models@0.1.0": "//components/toyota-api-types:toyota_api_types",
        "toyota:metrics/collector@0.1.0": "//components/metrics:toyota_metrics",
    },
    visibility = ["//visibility:public"],
)

# Test suite for all components
test_suite(
    name = "all_tests",
    tests = [
        "//components/business-logic:business_logic_test",
        "//components/validation:toyota_validation_test",
        # Other component tests run via cargo test (native target)
    ],
)
