[workspace]
resolver = "2"

members = [
    "myt2abrp",
    "myt",
    "components/business-logic",
    "components/circuit-breaker",
    "components/data-transform",
    "components/gateway",
    "components/metrics",
    "components/retry-logic",
    "components/toyota-api-types",
    "components/validation",
]

exclude = [
    "test-http",
    "web-ui",
]


[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"]}
serde_json = { version = "1.0.145" }
serde_path_to_error = "0.1.20"
anyhow = "1.0.100"
bytes = "1.10.1"
spin-sdk = "5.1.1"
