"""
Toyota MyT2ABRP WebAssembly Component Build
Uses rules_wasm_component for building, testing, and composing components
"""

module(
    name = "toyota_myt2abrp",
    version = "0.1.0",
)

# WebAssembly Component Model build rules
bazel_dep(name = "rules_wasm_component", version = "1.0.0")
git_override(
    module_name = "rules_wasm_component",
    remote = "https://github.com/pulseengine/rules_wasm_component.git",
    commit = "HEAD",  # Will use latest; pin to specific commit in production
)

# Rust toolchain for Rust components
bazel_dep(name = "rules_rust", version = "0.61.0")

# Required for hermetic toolchains
bazel_dep(name = "platforms", version = "0.0.10")
