"""
Toyota MyT2ABRP WebAssembly Component Build
Uses rules_wasm_component for building, testing, and composing components
"""

module(
    name = "toyota_myt2abrp",
    version = "0.1.0",
)

# WebAssembly Component Model build rules
# Note: This is a git override since the module is not in the Bazel Central Registry yet
git_override(
    module_name = "rules_wasm_component",
    remote = "https://github.com/pulseengine/rules_wasm_component.git",
    commit = "55a6a0a3ed9515a205bba1fbf8d4917f42084efa",  # Latest as of 2025-11-15
)

# Rust toolchain for Rust components
bazel_dep(name = "rules_rust", version = "0.61.0")

# Required for hermetic toolchains
bazel_dep(name = "platforms", version = "0.0.10")
