[package]
name = "myt"
version = "0.1.0"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
description = "inofficial Toyota MyT (Europe) connector"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Crate to simplify working with bytes.
bytes = { workspace = true }
spin-sdk = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }