[package]
name = "myt2abrp"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
description = "inofficial connector between Toyota MyT (Europe) and ABRP"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = { workspace = true }
# General-purpose crate with common HTTP types.
http = "1.2.0"
# The Spin SDK.
spin-sdk = { workspace = true }
# Base64 encoding/decoding
base64 = "0.22"
# UUID generation
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
# Time handling
chrono = "0.4"
# SHA256 hashing for username privacy
sha2 = "0.10"

myt = { path = "../myt" }
serde = { workspace = true }
serde_json = { workspace = true }
