[package]
name = "myt2abrp"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
description = "inofficial connector between Toyota MyT (Europe) and ABRP"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = { workspace = true }
# Crate to simplify working with bytes.
bytes = { workspace = true }
# General-purpose crate with common HTTP types.
http = "1.2.0"
# The Spin SDK.
spin-sdk = { workspace = true }
# Base64 encoding/decoding
base64 = "0.22"
# UUID generation
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
# Time handling
chrono = "0.4"
# HMAC-SHA256 for secure username hashing
sha2 = "0.10"
hmac = "0.12"
# JWT token generation and validation
jsonwebtoken = "9.3"
# Structured logging with tracing
tracing = "0.1"
# OpenAPI documentation generation
utoipa = { version = "5.3", features = ["uuid", "chrono"] }

myt = { path = "../myt", features = ["openapi"] }
serde = { workspace = true }
serde_json = { workspace = true }
