[package]
name = "myt2abrp"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
description = "inofficial connector between Toyota MyT (Europe) and ABRP"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = { workspace = true }
# Crate to simplify working with bytes.
bytes = { workspace = true }
# General-purpose crate with common HTTP types.
http = "1.2.0"
# The Spin SDK.
spin-sdk = { workspace = true }
# Base64 encoding/decoding
base64 = "0.22"
# UUID generation
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
# Time handling
chrono = "0.4"
# HMAC-SHA256 for secure username hashing
sha2 = "0.10"
hmac = "0.12"
# JWT token generation and validation
# Note: rsa 0.9.9 has RUSTSEC-2023-0071 (Marvin Attack), but we only use HS256 (HMAC), not RSA
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
# Structured logging with tracing
tracing = "0.1"
# OpenAPI documentation generation
utoipa = { version = "5.3", features = ["uuid", "chrono"] }
# URL encoding/decoding for query parameters
urlencoding = "2.1"

myt = { path = "../myt" }
serde = { workspace = true }
serde_json = { workspace = true }
