[package]
name = "toyota-business-logic"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Component model bindings
wit-bindgen-rt = "0.43.0"

# JWT operations - NO spin-sdk dependency!
jsonwebtoken = { version = "10.2.0", default-features = false, features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto for username hashing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# UUID for JWT IDs
uuid = { version = "1.18", features = ["v4", "fast-rng"] }

[package.metadata.component]
package = "toyota:business-logic"

[package.metadata.component.target]
path = "wit"
