[package]
name = "toyota-circuit-breaker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[package.metadata.component]
package = "toyota:circuit-breaker"

[package.metadata.component.target]
path = "wit"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
