"""
Data Transform Component

Pure business logic for converting Toyota Connected Services vehicle data
to A Better Route Planner (ABRP) telemetry format. Zero dependencies on
Spin SDK - only serde, chrono, and JSON processing.
"""

load("@rules_wasm_component//wasm_component:defs.bzl", "wasm_component")
load("@rules_rust//rust:defs.bzl", "rust_test")

# Build the component
wasm_component(
    name = "toyota_data_transform",
    package = "toyota:data-transform@0.1.0",
    wit = "wit/transform.wit",
    crate_root = "src/lib.rs",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:chrono",
        "@crates//:wit-bindgen-rt",
    ],
)

# Native target tests (faster than WASM)
rust_test(
    name = "toyota_data_transform_test",
    crate = ":toyota_data_transform",
    size = "small",
)
