"""
Gateway Component - Spin HTTP handler
Main entry point that imports and orchestrates all sub-components
"""

load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component")

package(default_visibility = ["//visibility:public"])

# WIT interface for gateway
filegroup(
    name = "gateway_wit",
    srcs = glob(["wit/**/*.wit"]),
    visibility = ["//visibility:public"],
)

# Gateway component - Spin HTTP handler
rust_wasm_component(
    name = "gateway",
    srcs = glob(["src/**/*.rs"]),
    wit = ":gateway_wit",
    world = "gateway",
    edition = "2021",

    # Rust dependencies
    deps = [
        "@crates//:spin-sdk",
        "@crates//:anyhow",
        "@crates//:wit-bindgen-rt",
    ],

    # Build profiles
    profiles = ["debug", "release"],

    visibility = ["//visibility:public"],
)
