"""
Gateway Component - Component Model P2 HTTP handler
Main entry point that imports and orchestrates all sub-components
Exports wasi:http/incoming-handler@0.2.0 for full P2 compatibility
"""

load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component")

package(default_visibility = ["//visibility:public"])

# WIT interface for gateway
filegroup(
    name = "gateway_wit",
    srcs = glob(["wit/**/*.wit"]),
    visibility = ["//visibility:public"],
)

# Gateway component - Pure Component Model P2 HTTP handler
# Uses wit-bindgen directly (no spin-sdk) for full WAC composition support
rust_wasm_component(
    name = "gateway",
    srcs = glob(["src/**/*.rs"]),
    wit = ":gateway_wit",
    world = "gateway",
    edition = "2021",

    # Rust dependencies - Pure Component Model (no spin-sdk)
    deps = [
        "@crates//:wit-bindgen",
        "@crates//:wit-bindgen-rt",
    ],

    # Build profiles
    profiles = ["debug", "release"],

    visibility = ["//visibility:public"],
)
