[package]
name = "toyota-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Pure Component Model dependencies (no spin-sdk)
wit-bindgen = { version = "0.41.0", default-features = false, features = ["macros"] }
wit-bindgen-rt = { version = "0.41.0", features = ["bitflags"] }

[package.metadata.component]
package = "toyota:gateway"

[package.metadata.component.target]
path = "wit"

[package.metadata.cargo-udeps.ignore]
normal = ["wit-bindgen-rt"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
