"""
Metrics Component

Prometheus-compatible metrics collection for observability.
Zero dependencies on Spin SDK - only wit-bindgen-rt.
"""

load("@rules_wasm_component//wasm_component:defs.bzl", "wasm_component")
load("@rules_rust//rust:defs.bzl", "rust_test")

# Build the component
wasm_component(
    name = "toyota_metrics",
    package = "toyota:metrics@0.1.0",
    wit = "wit/collector.wit",
    crate_root = "src/lib.rs",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:wit-bindgen-rt",
    ],
)

# Native target tests (faster than WASM)
rust_test(
    name = "toyota_metrics_test",
    crate = ":toyota_metrics",
    size = "small",
)
