[package]
name = "toyota-metrics"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }

[package.metadata.component]
package = "toyota:metrics"

[package.metadata.component.target]
path = "wit"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
